force-app/main/default/objects/cgcloud__CGCloud_Service_Schedule__c/cgcloud__CGCloud_Service_Schedule__c.object-meta.xml
<CustomObject>
    <description>This object is used to trigger workflow rules that send an outbound message including the session id to an Offplatform web service</description>
    <label>CGCloud Service Schedule</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>CGCloud Service Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CGCloud Service Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>