force-app/main/default/objects/cgcloud__CGCloud_Service_Schedule__c/fields/cgcloud__Complex_Pricing__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Complex_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Launches outbound message to Offplatform with Session Id.</description>
    <label>Complex Pricing</label>
    <type>Checkbox</type>
</CustomField>