force-app/main/default/objects/cgcloud__CGCloud_Service_Schedule__c/fields/cgcloud__Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Effective_Date__c</fullName>
    <description>The standardized date format for Offplatform Service calculation.</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>