force-app/main/default/objects/cgcloud__CGCloud_Service_Schedule__c/fields/cgcloud__Flatten_Org_Unit_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Flatten_Org_Unit_Hierarchy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Launches outbound message to Offplatform endpoint with session id to start flatten process</description>
    <label>Flatten Org Unit Hierarchy</label>
    <type>Checkbox</type>
</CustomField>