force-app/main/default/objects/cgcloud__CGCloud_Service_Schedule__c/fields/cgcloud__Job_Name__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Job_Name__c</fullName>
    <label>Job Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>