force-app/main/default/objects/cgcloud__CGCloud_Service_Schedule__c/fields/cgcloud__Promotion_Loader__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion_Loader__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Promotion Loader</label>
    <type>Checkbox</type>
</CustomField>