force-app/main/default/objects/cgcloud__CGCloud_Service_Schedule__c/fields/cgcloud__Promotion_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotion Template</label>
    <referenceTo>cgcloud__Promotion_Template__c</referenceTo>
    <relationshipLabel>CGCloud Service Schedule</relationshipLabel>
    <relationshipName>CGCloud_Service_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>