force-app/main/default/objects/cgcloud__CGCloud_Service_Schedule__c/fields/cgcloud__Segmentation_Calculation__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Segmentation_Calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Launches outbound message to Offplatform with Session Id</description>
    <label>Segmentation Calculation</label>
    <type>Checkbox</type>
</CustomField>