force-app/main/default/objects/cgcloud__CGCloud_Service_Schedule__c/recordTypes/cgcloud__Complex_Pricing.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Complex_Pricing</fullName>
    <active>true</active>
    <description>Complex Pricing schedule</description>
    <label>Complex Pricing</label>
</RecordType>