force-app/main/default/objects/cgcloud__CGCloud_Service_Schedule__c/recordTypes/cgcloud__Customer_Segmentation.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Customer_Segmentation</fullName>
    <active>true</active>
    <description>Customer segmentation related schedule</description>
    <label>Customer Segmentation</label>
</RecordType>