force-app/main/default/objects/cgcloud__CGCloud_Service_Schedule__c/recordTypes/cgcloud__Promotion_Loader.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Promotion_Loader</fullName>
    <active>true</active>
    <description>Promotion calculation schedule</description>
    <label>Promotion Loader</label>
</RecordType>