force-app/main/default/objects/cgcloud__CGCloud_Service_Schedule__c/recordTypes/cgcloud__Service_Flatten_Account_Hierarchy.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Service_Flatten_Account_Hierarchy</fullName>
    <active>true</active>
    <description>Account Flattener Calculation</description>
    <label>Service Flatten Account Hierarchy</label>
</RecordType>