force-app/main/default/objects/cgcloud__CGCloud_Service_Schedule__c/recordTypes/cgcloud__Service_Flatten_Org_Unit_Hierarchy.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Service_Flatten_Org_Unit_Hierarchy</fullName>
    <active>true</active>
    <description>Org Unit Flattener Calculation</description>
    <label>Service Flatten Org Unit Hierarchy</label>
</RecordType>